--- a/src/app.css
+++ b/src/app.css
@@ -1,17 +1,27 @@
 :root {
-    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    background-color: white;
-    color: #1f2937;
-    --text-light: #6b7280;
-    --text-orange: #d97706;
-    --link-hover: #1f2937;
+	font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+		'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+		'Segoe UI Symbol', 'Noto Color Emoji';
+	background-color: white;
+	color: #1f2937;
+	--text-light: #6b7280;
+	--text-orange: #d97706;
+	--link-hover: #1f2937;
+	--highlight-green: 16, 185, 129;
+	--highlight-blue: 59, 130, 246;
+	--highlight-pink: 244, 114, 182;
+	--highlight-github: 24, 27, 31;
+	--highlight-linkedin: 34, 89, 156;
 }
 
-
 :root[data-theme='dark'] {
-    background-color: #0e1421;
-    color: white;
-    --text-light: #9ca3af;
-    --text-orange: #fcd34d;
-    --link-hover: #e5e7eb;
+	background-color: #0e1421;
+	color: white;
+	--text-light: #9ca3af;
+	--text-orange: #fcd34d;
+	--link-hover: #e5e7eb;
+	--highlight-green: 110, 231, 183;
+	--highlight-blue: 96, 165, 250;
+	--highlight-github: 201, 209, 217;
+	--highlight-linkedin: 82, 134, 196;
 }
